# ForgeSight

./: .dockerignore  .env.example  .gitignore  .vercelignore  BUILD_GUIDE.md  README.md  agent_governance.py  docker-compose.yml  fly.toml  forgesight-v3-final.md  pyproject.toml  rag_retrieval.py  railway.json  sft-dataset-spec.md
backend/: Backend_workflow.md  Dockerfile  config.py  database_setup.md  requirements.txt  server.py
backend/agent/: build.py  caches.py  charters.py  demo_cards.py  governance.py  persistence.py  pipelines.py  prompt_builder.py  synthesis.py
backend/auth/: audit.py  jwt.py  supabase_admin.py
backend/db/: apply_migrations.py  connection.py  local_auth_shim.sql  migrations.sql  seed_accounts.sql  seed_data.sql
backend/models/: anomaly_iforest_v1.joblib  azure_feature_order.json  defect_pipeline_v1.joblib  failure_azure_xgb_v1.json  metrics.json  (+6 more)
data/: data_collection_flow.md  fetch_data.py
docs/: DEPLOY.md  architecture.md  assumptions_limitations.md  demo_script.md  finetune.md  requirements_traceability.md  sample_io.md  system_ppt_doc_conversion.py  verification_report.md  ~$TataSteel_AI_Hackathon_Round2_Submission.pptx
finetune/: 03_evaluate_vs_base.py  Modelfile  README.md  colab_finetune.ipynb  colab_train.py  finetuning_workflow.md  train_qlora.py
frontend/: .vercelignore  Frontend_workflow.md  README.md  package-lock.json  package.json
interview_preparation/: Interview_preparation_Q&A.md  demo_prompts.md
ml/: Ml_workflow.md  README.md
scripts/: diagnose_f3.py  local_pg.sh  shoot_agents.py  shoot_app.py  shoot_twin.py
(+109 files in other folders)
